<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        layout="@layout/toper_bar_login" />
     <LinearLayout 
						 android:id="@+id/progressbarOfLogin"
						 android:layout_width="fill_parent"
						 android:layout_height="fill_parent"
						 android:visibility="gone"
						  >
						<include layout="@layout/myprogress"/>
   	 </LinearLayout>
    <LinearLayout 
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:layout_margin="20dp"
        		android:background="@drawable/login_bg"
        		android:orientation="vertical"
        		>
        		<LinearLayout 
			        		    android:layout_width="fill_parent"
				        		android:layout_height="wrap_content"
				        		android:orientation="horizontal"
				        		android:layout_margin="15dp"
				        		android:background="@drawable/img_bg_login_input"
        		    		>
        		    		<ImageView 
        		    		    		android:layout_width="20dp"
        		    		    		android:layout_height="20dp"
        		    		    		android:layout_gravity="center_vertical"
        		    		    		android:src="@drawable/icon_login_user"
        		    		    		android:layout_margin="10dp"
        		    		    		/>
        		    		<EditText 
        		    		    	android:id="@+id/editUserNameOfLogin"
        		    		    	android:layout_width="fill_parent"
        		    		    	android:layout_height="wrap_content"
        		    		    	android:layout_gravity="center_vertical"
        		    		    	android:textSize="20sp"
        		    		    	android:hint="@string/login_user_hint"
        		    		    	android:background="@null"
        		    		    	 />
        		    		
        		</LinearLayout>
        		<LinearLayout 
			        		    android:layout_width="fill_parent"
				        		android:layout_height="wrap_content"
				        		android:orientation="horizontal"
				        		android:layout_margin="15dp"
				        		android:background="@drawable/img_bg_login_input"
        		    		>
        		    		<ImageView 
        		    		    		android:layout_width="20dp"
        		    		    		android:layout_height="20dp"
        		    		    		android:layout_gravity="center_vertical"
        		    		    		android:src="@drawable/icon_login_passw"
        		    		    		android:layout_margin="10dp"
        		    		    		/>
        		    		<EditText 
        		    		    	android:id="@+id/editPasswdOfLogin"
        		    		    	android:layout_width="fill_parent"
        		    		    	android:layout_height="wrap_content"
        		    		    	android:layout_gravity="center_vertical"
        		    		    	android:textSize="20sp"
        		    		    	android:hint="@string/login_passw_hint"
        		    		    	android:background="@null"
        		    		    	android:inputType="textPassword"
        		    		    	 />
        		    		
        		</LinearLayout>
        		<LinearLayout 
			        		    android:layout_width="fill_parent"
				        		android:layout_height="wrap_content"
				        		android:orientation="horizontal"
				        		android:gravity="center"
        		    		>
        		    		<TextView 
        		    		    		android:layout_width="wrap_content"
        		    		    		android:layout_height="wrap_content"
        		    		    		android:layout_gravity="center_vertical"
        		    		    		android:layout_margin="10dp"
        		    		    		android:text="@string/login_save_txt"
        		    		    		android:textSize="20sp"
        		    		    		android:textColor="#FFFFFF"
        		    		    		android:textStyle="bold"
        		    		    		/>
        		    		<ImageView 
										android:id="@+id/imgSwitchOfLogin"        		    		    		
        		    		    		android:layout_width="80dp"
        		    		    		android:layout_height="50dp"
        		    		    		android:src="@drawable/icon_login_switch_off"
        		    		    		android:scaleType="centerInside"
        		    		    		/>
        		</LinearLayout>
    </LinearLayout>
	<ImageButton 
	    		android:id="@+id/btn_loginOfLogin"
	    		android:layout_width="fill_parent"
	    		android:layout_height="50dp"
	    		android:layout_marginLeft="20dp"
	    		android:layout_marginRight="20dp"
	    		android:src="@drawable/selector_btn_login"
	    		android:background="#00000000"
	    		/>
	
	<TextView 
	    		android:id="@+id/text_show_displayOfLogin"
	    		android:layout_width="fill_parent"
	    		android:layout_height="50dp"
	    		android:layout_marginLeft="20dp"
	    		android:layout_marginRight="20dp"
	    		android:text="全球演示"
	    		android:autoLink="all"
	    		android:textSize="17sp"
	    		android:textColor="#00FF00"
	    		android:gravity="center"
	    		/>
	
</LinearLayout>