<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#d9ecfb"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="0dp"
        android:layout_weight="2"
        android:orientation="vertical" >

        <include
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            layout="@layout/toper_bar_yuntai" />

         <com.mm.android.avplaysdk.render.BasicGLSurfaceView
	        android:id="@+id/screenOfYuntai"
	        android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
	        >
	    </com.mm.android.avplaysdk.render.BasicGLSurfaceView>
	        

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/line1" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp" 
                     android:layout_weight="1"
                    >

                    <ImageButton
                        android:id="@+id/btn_minus1OfYuntai"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentLeft="true"
                        android:background="@drawable/selector_btn_minus"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/yuntai_shensuo" 
                        style="@style/yuntai_minus_plus"
                        />

                    <ImageButton
                        android:id="@+id/btn_plus1OfYuntai"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/selector_btn_plus" />
                </RelativeLayout>

               <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp" 
                     android:layout_weight="1"
                    >

                    <ImageButton
                         android:id="@+id/btn_minus2OfYuntai"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentLeft="true"
                        android:background="@drawable/selector_btn_minus" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/yuntai_jiaoju" 
                         style="@style/yuntai_minus_plus"
                        />

                    <ImageButton
                        android:id="@+id/btn_plus2OfYuntai"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/selector_btn_plus" />
                </RelativeLayout>

                 <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp" 
                     android:layout_weight="1"
                    >

                    <ImageButton
                         android:id="@+id/btn_minus3OfYuntai"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentLeft="true"
                        android:background="@drawable/selector_btn_minus" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/yuntai_guangquan"
                         style="@style/yuntai_minus_plus"
                         />

                    <ImageButton
                        android:id="@+id/btn_plus3OfYuntai"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/selector_btn_plus" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="1px"
                android:layout_height="fill_parent"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#006666" />

            <LinearLayout
			                android:layout_width="fill_parent"
			                android:layout_height="fill_parent"
			                android:layout_weight="1"
			                android:orientation="vertical" 
			                >
                			 <ImageButton
                			     	android:id="@+id/btn_switchOfYuntai"
			                        android:layout_width="wrap_content"
			                        android:layout_height="fill_parent"
			                        android:layout_margin="10dp"
			                        android:layout_weight="1"
			                        android:src="@drawable/selector_operation_state"
			                        android:scaleType="centerInside"
			                        android:layout_gravity="center"
			                        android:background="#00000000"
			                        />
                			 <LinearLayout 
                			     			android:layout_width="fill_parent"
                			     			android:layout_height="wrap_content"
                			     			android:orientation="horizontal"
                			     			>
                			     			<TextView 
                			     			    		android:layout_width="wrap_content"
                			     			    		android:layout_height="wrap_content"
                			     			    		android:text="@string/yuntai_speed"
                			     			    		android:textColor="#000000"
                			     			    		/>
                			     			<RelativeLayout 
                			     			    			android:id="@+id/relativeSpeedOfYuntai"
                			     			    			android:layout_width="fill_parent"
                			     			    			android:layout_height="fill_parent"
               			     			    				>
														<LinearLayout 
														    			android:layout_width="fill_parent"
														    			android:layout_height="1px"
														    			android:background="@drawable/line_yuntai_speed"
														    			android:layout_centerVertical="true"
														    			/>   
														 <ImageView 
														     		android:id="@+id/imgSpeedOfYuntai"
               			     			    			    		android:layout_width="wrap_content"
               			     			    			    		android:layout_height="wrap_content"
               			     			    			    		android:src="@drawable/img_yuntai_point"
               			     			    			    		/>            			     			    
                			     			</RelativeLayout>
                			 </LinearLayout>
                
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="15"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="0dp" >

        <include
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            layout="@layout/footer" />
    </LinearLayout>

</LinearLayout>